--- a/ActiveScience/ActiveScience.ipynb
+++ b/ActiveScience/ActiveScience.ipynb
@@ -24,8 +24,8 @@
     "# In this project, I will use Neo4j for graph storage and query and \n",
     "# ChatGPT for text entity recognition and create triple.\n",
     "# Hence, user config for both interfaces are required:\n",
-    "KEY = \"XXXXXXX\" # openAI\n",
-    "Neo4j_PWD = \"XXXXXXX\" # Neo4j"
+    "KEY = \"openAI_user_key\" # openAI\n",
+    "Neo4j_PWD = \"neo4j_password\" # Neo4j"
    ]
   },
   {
