--- a/ActiveScience/ActiveScience.ipynb
+++ b/ActiveScience/ActiveScience.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c1e01e95",
    "metadata": {},
    "outputs": [],
@@ -535,6 +535,25 @@
    "cell_type": "markdown",
    "id": "7fd22163",
    "metadata": {},
+   "source": [
+    "# Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc78f2fb",
+   "metadata": {},
+   "source": [
+    "### Visualization of knowledge graph in Neo4j\n",
+    "![KG.png](attachment:KG.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1581c2ca",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
